syntax = "proto3";
package game;

/////////////////////////////////////////////////////////////////////
// 游戏服系统相关请求消息
/////////////////////////////////////////////////////////////////////

// 心跳
message heartbeat
{
}

// 心跳应答
message heartbeat_resp
{
}

//ping pong
message ping_pong
{
}

message ping_pong_resp
{
}

/////////////////////////////////////////////////////////////////////
// 用户登录游戏服请求消息
/////////////////////////////////////////////////////////////////////

// 创建游戏角色
message create_player
{
}

// 创建角色应答
message create_player_resp
{
	uint32 ret    = 1;			// 应答结果  （0 : 成功，否则失败）
}