///////////////////////////////////////////////////////////
/// 游戏项目基础协议
///////////////////////////////////////////////////////////
syntax = "proto3";
package game;


// 错误信息
message NetError
{
	uint32 code  = 1;		// 错误码
}

// 协议头
message NetHeader
{
	uint32 uid   = 1;		// 用户编号
	string proto = 2;		// 协议名称
}

// 游戏消息封装结构
message NetMessage
{
	NetHeader header  = 1;
	NetError  error   = 2;
	bytes     payload = 3;
}
