///////////////////////////////////////////////////////////
/// 用户登录验证相关协议
///////////////////////////////////////////////////////////
syntax = "proto3";
package game;

// 登录请求
message account_login
{
	string account  = 1;		// 登录账号	
	string passwd   = 2;		// 登录令牌（平台登录验证需要）
}

// 请求应答
message account_login_resp
{
	uint32 ret       = 1;		// 登录结果（0 - 成功， 否则失败）
	uint32 token     = 2;       // 
}
